--- a/Client/src/Componentes/USUARIOS/ConfigPerfil/ConfigPerfil.module.css
+++ b/Client/src/Componentes/USUARIOS/ConfigPerfil/ConfigPerfil.module.css
@@ -169,7 +169,7 @@
     font-size: 20px;
     background-color: #45b545;
     color: #FFFFFFDC;
-    top: 6rem;
+    top: 3.5rem;
     left: 21.3rem;
     border-radius: 5px;
     border: none;
@@ -177,6 +177,52 @@
 }
 .botonGuardar:hover{
     background-color: #3e9e3e;
+}
+.botonGuardarDisabled{
+    position: relative;
+    height: 40px;
+    width: 200px;
+    font-size: 20px;
+    background-color: #4b4b4b;
+    color: #FFFFFFDC;
+    top: 3.5rem;
+    left: 21.3rem;
+    border-radius: 5px;
+    border: none;
+    cursor:pointer;
+    cursor: not-allowed; 
+}
+.botonEditar{
+    position: relative;
+    height: 40px;
+    width: 200px;
+    font-size: 20px;
+    background-color: #45b545;
+    color: #FFFFFFDC;
+    top: 6rem;
+    left: 7rem;
+    border-radius: 5px;
+    border: none;
+    cursor:pointer;
+}
+.botonEditar:hover{
+    background-color: #3e9e3e;
+}
+.botonCancelar{
+    position: relative;
+    height: 40px;
+    width: 200px;
+    font-size: 20px;
+    background-color: #4b4b4b;
+    color: #FFFFFFDC;
+    top: 6rem;
+    left: 7rem;
+    border-radius: 5px;
+    border: none;
+    cursor:pointer;
+}
+.botonCancelar:hover{
+    background-color: #4b4b4b;
 }
 .inputSeleccionarArchivo{
         position: absolute;
@@ -240,3 +286,8 @@
     color: red;
     cursor: pointer;
 }
+input[disabled] {
+    background-color: #f2f2f2;
+    color: #555; 
+    cursor: not-allowed; 
+  }
