--- a/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
+++ b/Client/src/Componentes/PRODUCTO/Vender/Detalle_De_Compra/Detalle_De_Compra.module.css
@@ -6,7 +6,11 @@
   width: 100%;
   height: 100%;
 }
-  
+.ContenedorBotones {
+  display: flex;
+  align-items: center; 
+  gap: 10px; 
+}
   
   .detalles{
     color: aliceblue;
@@ -69,6 +73,7 @@
     transition: 0.5s;
     border-radius: 10px;
     border: none;
+    
 }
 
 .ButtonSearch:hover {
@@ -82,7 +87,7 @@
     border: none;
     height: 40px;
     border-radius: 10px;
-    width: 150px;
+    width: 100px;
 }
 
 .search {
@@ -90,8 +95,14 @@
     justify-content: center;
     align-items: center;
     height: 80px;
-    width: 550px;
-    gap: 20px;
+    width: 700px;
+    gap: 7px;
+   margin-left: 120px;
+  
+   
+}
+.nombreCliente{
+ color: #00e900;
 }
   
   .Total {
@@ -135,26 +146,27 @@
   
   .botonGenerar {
     appearance: none;
-    background-color: transparent;
-    border: 0.125em solid #1a1a1a;
-    border-radius: 0.9375em;
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 600;
-    margin: 5px;
-    min-height: 3.75em;
-    min-width: 0;
-    outline: none;
-    text-align: center;
-    text-decoration: none;
-    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    will-change: transform;
+  background-color: transparent;
+  border: 0.125em solid #1a1a1a;
+  border-radius: 0.9375em;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 600;
+  margin: 5px;
+  min-height: 3.75em;
+  min-width: 0;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+  width:200px;
   }
   .botonGenerar:disabled {
     pointer-events: none;
@@ -177,26 +189,28 @@
   }
   .botonEliminaror{ 
     appearance: none;
-    background-color: transparent;
-    border: 0.125em solid #1a1a1a;
-    border-radius: 0.9375em;
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 600;
-    margin: 5px;
-    min-height: 3.75em;
-    min-width: 0;
-    outline: none;
-    text-align: center;
-    text-decoration: none;
-    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    will-change: transform;
+  background-color: transparent;
+  border: 0.125em solid #1a1a1a;
+  border-radius: 0.9375em;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 600;
+  margin: 5px;
+  min-height: 3.75em;
+  min-width: 0;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+  width:200px;
+ 
 }
 .botonEliminaror:disabled {
     pointer-events: none;
@@ -210,27 +224,28 @@
   }
   
     .botonVolver {
-    appearance: none;
-    background-color: transparent;
-    border: 0.125em solid #1a1a1a;
-    border-radius: 0.9375em;
-    box-sizing: border-box;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: 600;
-    margin: 5px;
-    min-height: 3.75em;
-    min-width: 0;
-    outline: none;
-    text-align: center;
-    text-decoration: none;
-    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    will-change: transform;
+      appearance: none;
+      background-color: transparent;
+      border: 0.125em solid #1a1a1a;
+      border-radius: 0.9375em;
+      box-sizing: border-box;
+      color: #ffffff;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 15px;
+      font-weight: 500;
+      margin: 5px;
+      min-height: 3.75em;
+      min-width: 0;
+      outline: none;
+      text-align: center;
+      text-decoration: none;
+      transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      will-change: transform;
+      width:150px;
   }
   .botonVolver:disabled {
     pointer-events: none;
